# Project2

./: README.md
Project2/: Project2.sln
Project2/Debug/: Project2.ilk
Project2/Dependencies/Windows/x86/SOIL/lib/: SOIL.idb  SOIL.lib
Project2/Project2/: CMakeCache.txt  CMakeLists.txt  Camera.h  Camera.h~  Engine.h  Engine.h~  Entity.h  GUI.h  GUIObject.h  GUIWindow.h  GameItem.h  GameObject.h  Makefile  Makefile~  Map.h  PickUp.h  Player.h  Player.h~  Project2.vcxproj  Project2.vcxproj.filters  Projectile.h  Resources.h  Settings.h  Sprite.h  SpriteSheet.h  TextRenderer - Copy.h  TextRenderer.h  TextRenderer.h~  cmake_install.cmake  kal  main  main.cpp  main.cpp~
Project2/Project2/Addons/: average.lua
Project2/Project2/Debug/: vc120.idb
Project2/Project2/Debug/Project2.tlog/: CL.read.1.tlog  CL.write.1.tlog  Project2.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project2/Project2/GUI/: GUI.h  GUIButton.h  GUILabel.h  GUIMessagebox.h  GUIObject.h  GUIProgressBar.h  GUITextField.h  GUIWindow.h  KeyMap.h  TextRenderer.h
Project2/Project2/LUA/: LUAManager.h
Project2/Project2/Network/: ConnectionHandler.h  Crypto.h  Dictionary.h  JSONParser.h  NetworkClient.h  NetworkDataHandler.cpp
Project2/Project2/Release/Project2.tlog/: Project2.lastbuildstate  cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project2/Project2/Shaders/: Shaders.h
Project2/Project2/images/: CMakeCache.txt
Project2/Project2/maps/: map001 - Copy (2).txt  map001.txt
Project2/Project2/x64/Debug/: vc120.idb
Project2/Project2/x64/Debug/Project2.tlog/: CL.read.1.tlog  CL.write.1.tlog  Project2.lastbuildstate  cl.command.1.tlog
